<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    
    >
   
      <LinearLayout 
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/readygame"
          android:orientation="vertical" 
          >
        <Button
            android:id="@+id/mission_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_one" />
        
         <Button
            android:id="@+id/mission_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_two"
             style="?android:attr/borderlessButtonStyle" />              
         <Button
            android:id="@+id/mission_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_three"
             style="?android:attr/borderlessButtonStyle" />             
          <Button
            android:id="@+id/mission_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_four"
             style="?android:attr/borderlessButtonStyle" /> 
             
          <Button
            android:id="@+id/mission_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_five"
             style="?android:attr/borderlessButtonStyle" />            
           <Button
            android:id="@+id/mission_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_six"
             style="?android:attr/borderlessButtonStyle" />   
             
         <Button
            android:id="@+id/mission_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_seven"
             style="?android:attr/borderlessButtonStyle" />    
             
           <Button
            android:id="@+id/mission_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="800dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_eight"
             style="?android:attr/borderlessButtonStyle" />      
             
            <Button
            android:id="@+id/mission_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="900dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_nine"
             style="?android:attr/borderlessButtonStyle" />   
             
               <Button
            android:id="@+id/mission_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1200dp"
            android:layout_marginLeft="150dp"
            android:text="@string/mission_ten"
             style="?android:attr/borderlessButtonStyle" />   
           
      </LinearLayout>
      



</ScrollView>
