<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"

    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.enggameforlearn.MainActivity" >

    <RelativeLayout
        android:id="@+id/main_account_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_main_account_div"
        android:padding="15dp" >

        <ImageView
            android:id="@+id/portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/portrait_bg"
            android:contentDescription="@string/portait"
             />

        <TextView
            android:id="@+id/main_account"
            style="@style/normalText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="500dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/login_label_account" />

        <Button
            android:id="@+id/main_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="150dp"
            android:text="@string/main_logout" />

        <TextView
            android:id="@+id/main_lv"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/main_lv" />
    </RelativeLayout>

   <RelativeLayout 
       android:id="@+id/main_saying_div"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:padding="15dp" 
       android:layout_marginLeft="-250dp"       
         android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="150dp"      
       >
       <TextView 
           android:id="@+id/main_saying_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true" 
           android:layout_marginTop="5dp"
           android:text="@string/main_saying_title" 
           />
       <TextView 
           android:id="@+id/main_saying_content"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:layout_marginTop="25dp"
           android:text="@string/main_saying_ex" 
           />       
       
       
   </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_button_div"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginLeft="-250dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="370dp"
        android:padding="15dp" >
        <Button
            android:id="@+id/button_classicalmodel"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:text="@string/main_classicalmodel" />
        <Button
            android:id="@+id/button_startgame"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:text="@string/main_startgame" />
    </RelativeLayout>

</LinearLayout>